refactor: add more readable operationId to endpoints
