# core-service/openapi.json
@@ -11,12 +11,12 @@
           "auth"
         ],
         "summary": "Log User",
-        "operationId": "log_user_api_auth_login_post",
+        "operationId": "log_user",
         "requestBody": {
           "content": {
             "application/x-www-form-urlencoded": {
               "schema": {
-                "$ref": "#/components/schemas/Body_log_user_api_auth_login_post"
+                "$ref": "#/components/schemas/Body_log_user"
               }
             }
           },
@@ -56,7 +56,7 @@
           "auth"
         ],
         "summary": "Refresh Tokens",
-        "operationId": "refresh_tokens_api_auth_refresh_post",
+        "operationId": "refresh_tokens",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -81,7 +81,7 @@
           "auth"
         ],
         "summary": "Check Is User Logged",
-        "operationId": "check_is_user_logged_api_auth_me_get",
+        "operationId": "check_is_user_logged",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -106,7 +106,7 @@
           "auth"
         ],
         "summary": "Logout User",
-        "operationId": "logout_user_api_auth_logout_post",
+        "operationId": "logout_user",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -128,7 +128,7 @@
           "regulations"
         ],
         "summary": "Get Public Regulations",
-        "operationId": "get_public_regulations_api_regulations_get",
+        "operationId": "get_public_regulations",
         "parameters": [
           {
             "name": "documentType",
@@ -157,7 +157,7 @@
                   "items": {
                     "$ref": "#/components/schemas/RegulationRepresentation"
                   },
-                  "title": "Response Get Public Regulations Api Regulations Get"
+                  "title": "Response Get Public Regulations"
                 }
               }
             }
@@ -185,7 +185,7 @@
           "regulations"
         ],
         "summary": "Add Public Regulation",
-        "operationId": "add_public_regulation_api_regulations_post",
+        "operationId": "add_public_regulation",
         "requestBody": {
           "required": true,
           "content": {
@@ -229,7 +229,7 @@
           "regulations"
         ],
         "summary": "Search Regulation Documents",
-        "operationId": "search_regulation_documents_api_regulations__regulationId__documents_get",
+        "operationId": "search_regulation_documents",
         "parameters": [
           {
             "name": "regulationId",
@@ -298,7 +298,7 @@
                   "items": {
                     "$ref": "#/components/schemas/SearchResult"
                   },
-                  "title": "Response Search Regulation Documents Api Regulations  Regulationid  Documents Get"
+                  "title": "Response Search Regulation Documents"
                 }
               }
             }
@@ -334,7 +334,7 @@
           "regulations"
         ],
         "summary": "Confirm Public Regulation Upload",
-        "operationId": "confirm_public_regulation_upload_api_regulations__regulationId__confirm_upload_post",
+        "operationId": "confirm_public_regulation_upload",
         "parameters": [
           {
             "name": "regulationId",
@@ -384,7 +384,7 @@
           "regulations"
         ],
         "summary": "Get Public Regulation Download Url",
-        "operationId": "get_public_regulation_download_url_api_regulations__regulationId__download_url_get",
+        "operationId": "get_public_regulation_download_url",
         "parameters": [
           {
             "name": "regulationId",
@@ -404,7 +404,7 @@
               "application/json": {
                 "schema": {
                   "type": "string",
-                  "title": "Response Get Public Regulation Download Url Api Regulations  Regulationid  Download Url Get"
+                  "title": "Response Get Public Regulation Download Url"
                 }
               }
             }
@@ -434,7 +434,7 @@
           "regulations"
         ],
         "summary": "Delete Public Regulation",
-        "operationId": "delete_public_regulation_api_regulations__regulationId__delete",
+        "operationId": "delete_public_regulation",
         "parameters": [
           {
             "name": "regulationId",
@@ -476,7 +476,7 @@
           "regulations"
         ],
         "summary": "Retry Public Regulation Preparation",
-        "operationId": "retry_public_regulation_preparation_api_regulations__regulationId__preparation_retry_post",
+        "operationId": "retry_public_regulation_preparation",
         "parameters": [
           {
             "name": "regulationId",
@@ -526,7 +526,7 @@
           "account"
         ],
         "summary": "Create Account",
-        "operationId": "create_account_api_accounts_register_post",
+        "operationId": "create_account",
         "requestBody": {
           "content": {
             "application/json": {
@@ -571,7 +571,7 @@
           "cases"
         ],
         "summary": "Get Cases List",
-        "operationId": "get_cases_list_api_user_cases_get",
+        "operationId": "get_cases_list",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -582,7 +582,7 @@
                     "$ref": "#/components/schemas/CaseData"
                   },
                   "type": "array",
-                  "title": "Response Get Cases List Api User Cases Get"
+                  "title": "Response Get Cases List"
                 }
               }
             }
@@ -600,12 +600,12 @@
           "cases"
         ],
         "summary": "Add Case",
-        "operationId": "add_case_api_user_cases_post",
+        "operationId": "add_case",
         "requestBody": {
           "content": {
             "application/x-www-form-urlencoded": {
               "schema": {
-                "$ref": "#/components/schemas/Body_add_case_api_user_cases_post"
+                "$ref": "#/components/schemas/Body_add_case"
               }
             }
           },
@@ -619,7 +619,7 @@
                 "schema": {
                   "type": "string",
                   "format": "uuid",
-                  "title": "Response Add Case Api User Cases Post"
+                  "title": "Response Add Case"
                 }
               }
             }
@@ -646,7 +646,7 @@
           "cases"
         ],
         "summary": "Delete User Case",
-        "operationId": "delete_user_case_api_user_cases__caseId__delete",
+        "operationId": "delete_user_case",
         "parameters": [
           {
             "name": "caseId",
@@ -688,7 +688,7 @@
           "cases"
         ],
         "summary": "Add Case Document",
-        "operationId": "add_case_document_api_user_cases__caseId__documents_post",
+        "operationId": "add_case_document",
         "parameters": [
           {
             "name": "caseId",
@@ -743,7 +743,7 @@
           "cases"
         ],
         "summary": "Get Case Documents",
-        "operationId": "get_case_documents_api_user_cases__caseId__documents_get",
+        "operationId": "get_case_documents",
         "parameters": [
           {
             "name": "caseId",
@@ -766,7 +766,7 @@
                   "items": {
                     "$ref": "#/components/schemas/CaseDocument"
                   },
-                  "title": "Response Get Case Documents Api User Cases  Caseid  Documents Get"
+                  "title": "Response Get Case Documents"
                 }
               }
             }
@@ -796,7 +796,7 @@
           "cases"
         ],
         "summary": "Delete Case Document",
-        "operationId": "delete_case_document_api_user_cases_documents__documentId__delete",
+        "operationId": "delete_case_document",
         "parameters": [
           {
             "name": "documentId",
@@ -835,7 +835,7 @@
           "user_regulations"
         ],
         "summary": "Get User Regulations",
-        "operationId": "get_user_regulations_api_user_regulations_get",
+        "operationId": "get_user_regulations",
         "parameters": [
           {
             "name": "documentType",
@@ -864,7 +864,7 @@
                   "items": {
                     "$ref": "#/components/schemas/RegulationRepresentation"
                   },
-                  "title": "Response Get User Regulations Api User Regulations Get"
+                  "title": "Response Get User Regulations"
                 }
               }
             }
@@ -892,7 +892,7 @@
           "user_regulations"
         ],
         "summary": "Add User Regulation",
-        "operationId": "add_user_regulation_api_user_regulations_post",
+        "operationId": "add_user_regulation",
         "requestBody": {
           "required": true,
           "content": {
@@ -942,7 +942,7 @@
           "user_regulations"
         ],
         "summary": "Confirm User Regulation Upload",
-        "operationId": "confirm_user_regulation_upload_api_user_regulations__regulationId__confirm_upload_post",
+        "operationId": "confirm_user_regulation_upload",
         "parameters": [
           {
             "name": "regulationId",
@@ -992,7 +992,7 @@
           "user_regulations"
         ],
         "summary": "Get User Regulation Download Url",
-        "operationId": "get_user_regulation_download_url_api_user_regulations__regulationId__download_url_get",
+        "operationId": "get_user_regulation_download_url",
         "parameters": [
           {
             "name": "regulationId",
@@ -1012,7 +1012,7 @@
               "application/json": {
                 "schema": {
                   "type": "string",
-                  "title": "Response Get User Regulation Download Url Api User Regulations  Regulationid  Download Url Get"
+                  "title": "Response Get User Regulation Download Url"
                 }
               }
             }
@@ -1042,7 +1042,7 @@
           "user_regulations"
         ],
         "summary": "Delete User Regulation",
-        "operationId": "delete_user_regulation_api_user_regulations__regulationId__delete",
+        "operationId": "delete_user_regulation",
         "parameters": [
           {
             "name": "regulationId",
@@ -1083,8 +1083,8 @@
         "tags": [
           "user_regulations"
         ],
-        "summary": "Search Regulation Documents",
-        "operationId": "search_regulation_documents_api_user_regulations__regulationId__documents_get",
+        "summary": "Search User Regulation Documents",
+        "operationId": "search_user_regulation_documents",
         "parameters": [
           {
             "name": "regulationId",
@@ -1153,7 +1153,7 @@
                   "items": {
                     "$ref": "#/components/schemas/SearchResult"
                   },
-                  "title": "Response Search Regulation Documents Api User Regulations  Regulationid  Documents Get"
+                  "title": "Response Search User Regulation Documents"
                 }
               }
             }
@@ -1189,7 +1189,7 @@
           "user_regulations"
         ],
         "summary": "Retry User Regulation Preparation",
-        "operationId": "retry_user_regulation_preparation_api_user_regulations__regulationId__preparation_retry_post",
+        "operationId": "retry_user_regulation_preparation",
         "parameters": [
           {
             "name": "regulationId",
@@ -1239,7 +1239,7 @@
           "health check"
         ],
         "summary": "Get Health Status",
-        "operationId": "get_health_status_health_liveness_get",
+        "operationId": "get_health_status",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -1248,7 +1248,7 @@
                 "schema": {
                   "type": "string",
                   "const": "OK",
-                  "title": "Response Get Health Status Health Liveness Get"
+                  "title": "Response Get Health Status"
                 }
               }
             }
@@ -1265,7 +1265,7 @@
           "health check"
         ],
         "summary": "Check is application ready to response for requests.",
-        "operationId": "check_readiness_health_ready_get",
+        "operationId": "check_readiness",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -1274,7 +1274,7 @@
                 "schema": {
                   "type": "boolean",
                   "const": true,
-                  "title": "Response Check Readiness Health Ready Get"
+                  "title": "Response Check Readiness"
                 }
               }
             }
@@ -1288,7 +1288,7 @@
   },
   "components": {
     "schemas": {
-      "Body_add_case_api_user_cases_post": {
+      "Body_add_case": {
         "properties": {
           "caseName": {
             "type": "string",
@@ -1299,9 +1299,9 @@
         "required": [
           "caseName"
         ],
-        "title": "Body_add_case_api_user_cases_post"
+        "title": "Body_add_case"
       },
-      "Body_log_user_api_auth_login_post": {
+      "Body_log_user": {
         "properties": {
           "grant_type": {
             "anyOf": [
@@ -1358,7 +1358,7 @@
           "username",
           "password"
         ],
-        "title": "Body_log_user_api_auth_login_post"
+        "title": "Body_log_user"
       },
       "CaseData": {
         "properties": {
